fix: title/description/favicon 변경 & 카테고리 상세 클릭시 모달 닫아주기 추가

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="요비몰에서만 만나볼 수 있는 특가, 독점 상품을 확인해보세요. "
     />
-    <title>React App</title>
+    <title>요비몰 쇼핑하기</title>
   </head>
   <body>
     <div id="root"></div>
