feat: 공유하기 단순 사이트 url로 추가

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="요비몰에서만 만나볼 수 있는 특가, 독점 상품을 확인해보세요. "
     />
     <title>요비몰 쇼핑하기</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
